<resources>
    <string name="app_name">五等分の花嫁ったーくん</string>

    <string name="heroine_ichika">一花</string>
    <string name="heroine_nino">二乃</string>
    <string name="heroine_miku">三玖</string>
    <string name="heroine_yotsuba">四葉</string>
    <string name="heroine_itsuki">五月</string>

    <string name="twitter_date_time_hour">%1$d時間前</string>
    <string name="twitter_date_time_minutes">%1$d分前</string>
    <string name="twitter_date_time_seconds">%1$d秒前</string>
    <string name="twitter_date_time_now">たった今</string>

    <string name="tweet_user">%1$s @%2$s</string>

    <string name="share_tweet_title">布教する</string>
    <string name="share_tweet_subject">神託</string>
    <string name="share_tweet_text">っ %1$s</string>

    <string name="share_image_title">花嫁を見せびらかす</string>
    <string name="share_image_subject">ウチの花嫁</string>
    <string name="share_image_text">あぁ＾〜かわいいんじゃ＾〜 %1$s</string>

    <string name="link_to_user">https://twitter.com/%1$s</string>
    <string name="link_to_tweet">https://twitter.com/%1$s/status/%2$d</string>

    <string name="library_license_title">ライセンス</string>

    <string name="menu_item_library_license">ライセンス</string>

    <string name="menu_item_share_tweet">ツイートを共有</string>
    <string name="menu_item_share_image">画像を共有</string>
</resources>
